--- a/java-docker-db/demo/Dockerfile
+++ b/java-docker-db/demo/Dockerfile
@@ -1,4 +1,6 @@
-FROM openjdk
-WORKDIR /application
-COPY target/demo-0.0.1-SNAPSHOT.jar /application/app.jar
-ENTRYPOINT ["java","-jar","app.jar"]
+FROM maven:3.8.6-openjdk-11
+WORKDIR /home/app
+COPY src ./src
+COPY pom.xml .
+RUN mvn clean package -DskipTests
+ENTRYPOINT ["java","-jar","./target/demo-0.0.1-SNAPSHOT.jar"]
