--- a/java-docker-db/demo/src/main/resources/application.properties
+++ b/java-docker-db/demo/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://my-app-database:5432/db-java-docker
+spring.datasource.url=jdbc:postgresql://my-app-database-with-compose:5432/db-java-docker
 
 spring.datasource.username=postgres
 
